src/grammars/csharp/.antlr/CsharpParser.java
// Generated from c:/elan-language/LanguageAndIDE/src/grammars/csharp/Csharp.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CsharpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT_MARKER=1, INT_NAME=2, FLOAT_NAME=3, BOOL_NAME=4, STRING_NAME=5, 
		LIST_NAME=6, FUNC_NAME=7, TRUE=8, FALSE=9, AND=10, OR=11, NOT=12, EQUAL=13, 
		NOT_EQUAL=14, MOD=15, ARROW=16, BINARY_PREFIX=17, HEX_PREFIX=18, INTERPOLATED_STRING_PREFIX=19, 
		THIS_INSTANCE=20, STATIC=21, VOID=22, TEST_CLASS_ANNOT=23, TEST_METHOD_ANNOT=24, 
		CONST=25, ENUM=26, ABSTRACT=27, FOREACH=28, VAR=29, ASSERT=30, ARE_EQUAL=31, 
		SEMI_COLON=32, THROW=33, NEW=34, CATCH=35, PUBLIC=36, PRIVATE=37, GET=38, 
		SET=39, GET_SET=40, CLASS=41, ELSE=42, FOR=43, IF=44, IN=45, INPUT=46, 
		LAMBDA=47, MAIN=48, PRINT=49, RETURN=50, TRY=51, WHILE=52, POWER=53, TUPLE=54, 
		IF_=55, COMMENT=56, SINGLE_EQUALS=57, OPEN_BRACE=58, CLOSE_BRACE=59, OPEN_SQ_BRACKET=60, 
		CLOSE_SQ_BRACKET=61, OPEN_BRACKET=62, CLOSE_BRACKET=63, DOT=64, COMMA=65, 
		COLON=66, PLUS=67, MINUS=68, MULT=69, DIVIDE=70, LT=71, GT=72, LE=73, 
		GE=74, DOUBLE_QUOTES=75, WS=76, NL=77, NAME_STARTING_TEST_=78, NAME_STARTING_LC=79, 
		NAME_STARTING_UC=80, LITERAL_BINARY=81, LITERAL_HEX=82, LITERAL_INTEGER=83, 
		LITERAL_FLOAT=84, LITERAL_STRING=85, WHITESPACES=86, TEXT=87, GHOSTED=88, 
		FUNCTION_ANNOTATION=89, PROCECDURE_ANNOTATION=90, CONSTANT_ANNOTATION=91, 
		ENUM_ANNOTATION=92, CONCRETE_CLASS_ANNOTATION=93, ABSTRACT_CLASS_ANNOTATION=94, 
		VARIABLE_ANNOTATION=95, ASSIGNMENT_ANNOTATION=96, INPUT_ANNOTATION=97, 
		CALL_ANNOTATION=98, LET_ANNOTATION=99, ELSE_IF_ANNOTATION=100, PROPERTY_ANNOTATION=101, 
		FUNCTION_METHOD_ANNOTATION=102, PROCEDURE_METHOD_ANNOTATION=103;
	public static final int
		RULE_file = 0, RULE_global = 1, RULE_main = 2, RULE_function = 3, RULE_test = 4, 
		RULE_procedure = 5, RULE_constant = 6, RULE_enum = 7, RULE_concreteClass = 8, 
		RULE_abstractClass = 9, RULE_commentLine = 10, RULE_ordinaryStatement = 11, 
		RULE_ifStatement = 12, RULE_whileLoop = 13, RULE_forLoop = 14, RULE_tryStatement = 15, 
		RULE_assert = 16, RULE_print = 17, RULE_variableDefinition = 18, RULE_assignment = 19, 
		RULE_inputStatement = 20, RULE_procedureCall = 21, RULE_throwStatement = 22, 
		RULE_returnStatement = 23, RULE_elseIfClause = 24, RULE_elseClause = 25, 
		RULE_catchStatement = 26, RULE_constructorMember = 27, RULE_property = 28, 
		RULE_functionMethod = 29, RULE_procedureMethod = 30, RULE_abstractFunction = 31, 
		RULE_abstractProcedure = 32, RULE_identifier = 33, RULE_assignable = 34, 
		RULE_methodName = 35, RULE_testName = 36, RULE_typeName = 37, RULE_constantValue = 38, 
		RULE_argList = 39, RULE_argument = 40, RULE_paramsList = 41, RULE_type = 42, 
		RULE_enumValuesList = 43, RULE_assertActual = 44, RULE_litValue = 45, 
		RULE_litBoolean = 46, RULE_litInt = 47, RULE_litFloat = 48, RULE_enumValue = 49, 
		RULE_litString = 50, RULE_index = 51, RULE_identifierWithOptIndexes = 52, 
		RULE_propertyRef = 53, RULE_expression = 54, RULE_term = 55, RULE_chainHead = 56, 
		RULE_chainable = 57, RULE_bracketedExpression = 58, RULE_unaryExpression = 59, 
		RULE_binaryExpression = 60, RULE_tuple = 61, RULE_methodCall = 62, RULE_binaryOperator = 63, 
		RULE_newInstance = 64, RULE_paramDef = 65, RULE_typeGeneric = 66, RULE_typeTuple = 67, 
		RULE_lambda = 68, RULE_list = 69, RULE_interpolatedString = 70, RULE_power = 71;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "global", "main", "function", "test", "procedure", "constant", 
			"enum", "concreteClass", "abstractClass", "commentLine", "ordinaryStatement", 
			"ifStatement", "whileLoop", "forLoop", "tryStatement", "assert", "print", 
			"variableDefinition", "assignment", "inputStatement", "procedureCall", 
			"throwStatement", "returnStatement", "elseIfClause", "elseClause", "catchStatement", 
			"constructorMember", "property", "functionMethod", "procedureMethod", 
			"abstractFunction", "abstractProcedure", "identifier", "assignable", 
			"methodName", "testName", "typeName", "constantValue", "argList", "argument", 
			"paramsList", "type", "enumValuesList", "assertActual", "litValue", "litBoolean", 
			"litInt", "litFloat", "enumValue", "litString", "index", "identifierWithOptIndexes", 
			"propertyRef", "expression", "term", "chainHead", "chainable", "bracketedExpression", 
			"unaryExpression", "binaryExpression", "tuple", "methodCall", "binaryOperator", 
			"newInstance", "paramDef", "typeGeneric", "typeTuple", "lambda", "list", 
			"interpolatedString", "power"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'//'", "'int'", "'double'", "'bool'", "'string'", "'List'", "'Func'", 
			"'true'", "'false'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'%'", "'=>'", 
			"'0b'", "'0x'", "'$'", "'this'", "'static'", "'void'", null, null, "'const'", 
			"'enum'", "'abstract'", "'foreach'", "'var'", "'Assert'", "'areEqual'", 
			"';'", "'throw'", "'new'", "'catch'", "'public'", "'private'", "'get'", 
			"'set'", null, "'class'", "'else'", "'for'", "'if'", "'in'", "'input'", 
			"'lambda'", "'main'", "'print'", "'return'", "'try'", "'while'", "'^'", 
			"'tuple'", "'if_'", null, "'='", "'{'", "'}'", "'['", "']'", "'('", "')'", 
			"'.'", "','", "':'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'<='", 
			"'>='", "'\"'", null, null, null, null, null, null, null, null, null, 
			null, null, null, "'[ghosted]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT_MARKER", "INT_NAME", "FLOAT_NAME", "BOOL_NAME", "STRING_NAME", 
			"LIST_NAME", "FUNC_NAME", "TRUE", "FALSE", "AND", "OR", "NOT", "EQUAL", 
			"NOT_EQUAL", "MOD", "ARROW", "BINARY_PREFIX", "HEX_PREFIX", "INTERPOLATED_STRING_PREFIX", 
			"THIS_INSTANCE", "STATIC", "VOID", "TEST_CLASS_ANNOT", "TEST_METHOD_ANNOT", 
			"CONST", "ENUM", "ABSTRACT", "FOREACH", "VAR", "ASSERT", "ARE_EQUAL", 
			"SEMI_COLON", "THROW", "NEW", "CATCH", "PUBLIC", "PRIVATE", "GET", "SET", 
			"GET_SET", "CLASS", "ELSE", "FOR", "IF", "IN", "INPUT", "LAMBDA", "MAIN", 
			"PRINT", "RETURN", "TRY", "WHILE", "POWER", "TUPLE", "IF_", "COMMENT", 
			"SINGLE_EQUALS", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_SQ_BRACKET", "CLOSE_SQ_BRACKET", 
			"OPEN_BRACKET", "CLOSE_BRACKET", "DOT", "COMMA", "COLON", "PLUS", "MINUS", 
			"MULT", "DIVIDE", "LT", "GT", "LE", "GE", "DOUBLE_QUOTES", "WS", "NL", 
			"NAME_STARTING_TEST_", "NAME_STARTING_LC", "NAME_STARTING_UC", "LITERAL_BINARY", 
			"LITERAL_HEX", "LITERAL_INTEGER", "LITERAL_FLOAT", "LITERAL_STRING", 
			"WHITESPACES", "TEXT", "GHOSTED", "FUNCTION_ANNOTATION", "PROCECDURE_ANNOTATION", 
			"CONSTANT_ANNOTATION", "ENUM_ANNOTATION", "CONCRETE_CLASS_ANNOTATION", 
			"ABSTRACT_CLASS_ANNOTATION", "VARIABLE_ANNOTATION", "ASSIGNMENT_ANNOTATION", 
			"INPUT_ANNOTATION", "CALL_ANNOTATION", "LET_ANNOTATION", "ELSE_IF_ANNOTATION", 
			"PROPERTY_ANNOTATION", "FUNCTION_METHOD_ANNOTATION", "PROCEDURE_METHOD_ANNOTATION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Csharp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CsharpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CsharpParser.EOF, 0); }
		public TerminalNode COMMENT() { return getToken(CsharpParser.COMMENT, 0); }
		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}
		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(CsharpParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(CsharpParser.NL, i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(144);
				match(COMMENT);
				}
				break;
			}
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 72059793306550272L) != 0)) {
				{
				{
				setState(147);
				global();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(153);
				match(NL);
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TestContext test() {
			return getRuleContext(TestContext.class,0);
		}
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public EnumContext enum_() {
			return getRuleContext(EnumContext.class,0);
		}
		public ConcreteClassContext concreteClass() {
			return getRuleContext(ConcreteClassContext.class,0);
		}
		public AbstractClassContext abstractClass() {
			return getRuleContext(AbstractClassContext.class,0);
		}
		public CommentLineContext commentLine() {
			return getRuleContext(CommentLineContext.class,0);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				main();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				function();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				test();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(164);
				procedure();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(165);
				constant();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(166);
				enum_();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(167);
				concreteClass();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(168);
				abstractClass();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(169);
				commentLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode STATIC() { return getToken(CsharpParser.STATIC, 0); }
		public TerminalNode VOID() { return getToken(CsharpParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(CsharpParser.MAIN, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(CsharpParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(CsharpParser.CLOSE_BRACKET, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(CsharpParser.OPEN_BRACE, 0); }
		public List<TerminalNode> NL() { return getTokens(CsharpParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(CsharpParser.NL, i);
		}
		public TerminalNode CLOSE_BRACE() { return getToken(CsharpParser.CLOSE_BRACE, 0); }
		public TerminalNode COMMENT() { return getToken(CsharpParser.COMMENT, 0); }
		public List<OrdinaryStatementContext> ordinaryStatement() {
			return getRuleContexts(OrdinaryStatementContext.class);
		}
		public OrdinaryStatementContext ordinaryStatement(int i) {
			return getRuleContext(OrdinaryStatementContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(STATIC);
			setState(173);
			match(VOID);
			setState(174);
			match(MAIN);
			setState(175);
			match(OPEN_BRACKET);
			setState(176);
			match(CLOSE_BRACKET);
			setState(177);
			match(OPEN_BRACE);
			setState(178);
			match(NL);
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4979309939594363772L) != 0) || ((((_la - 79)) & ~0x3f) == 0 && ((1L << (_la - 79)) & 127L) != 0)) {
				{
				{
				setState(179);
				ordinaryStatement();
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185);
			match(CLOSE_BRACE);
			setState(186);
			match(COMMENT);
			setState(187);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode STATIC() { return getToken(CsharpParser.STATIC, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public MethodNameContext methodName() {
			return getRuleContext(MethodNameContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(CsharpParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(CsharpParser.CLOSE_BRACKET, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(CsharpParser.OPEN_BRACE, 0); }
		public List<TerminalNode> COMMENT() { return getTokens(CsharpParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(CsharpParser.COMMENT, i);
		}
		public List<TerminalNode> NL() { return getTokens(CsharpParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(CsharpParser.NL, i);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public TerminalNode CLOSE_BRACE() { return getToken(CsharpParser.CLOSE_BRACE, 0); }
		public ParamsListContext paramsList() {
			return getRuleContext(ParamsListContext.class,0);
		}
		public List<OrdinaryStatementContext> ordinaryStatement() {
			return getRuleContexts(OrdinaryStatementContext.class);
		}
		public OrdinaryStatementContext ordinaryStatement(int i) {
			return getRuleContext(OrdinaryStatementContext.class,i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			match(STATIC);
			setState(190);
			type();
			setState(191);
			methodName();
			setState(192);
			match(OPEN_BRACKET);
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 18014398509482108L) != 0) || _la==NAME_STARTING_UC) {
				{
				setState(193);
				paramsList();
				}
			}

			setState(196);
			match(CLOSE_BRACKET);
			setState(197);
			match(OPEN_BRACE);
			setState(198);
			match(COMMENT);
			setState(199);
			match(NL);
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4979309939594363772L) != 0) || ((((_la - 79)) & ~0x3f) == 0 && ((1L << (_la - 79)) & 127L) != 0)) {
				{
				{
				setState(200);
				ordinaryStatement();
				}
				}
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(206);
			returnStatement();
			setState(207);
			match(CLOSE_BRACE);
			setState(208);
			match(COMMENT);
			setState(209);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TestContext extends ParserRuleContext {
		public TerminalNode TEST_CLASS_ANNOT() { return getToken(CsharpParser.TEST_CLASS_ANNOT, 0); }
		public TerminalNode CLASS() { return getToken(CsharpParser.CLASS, 0); }
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(CsharpParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(CsharpParser.NL, i);
		}
		public TerminalNode TEST_METHOD_ANNOT() { return getToken(CsharpParser.TEST_METHOD_ANNOT, 0); }
		public TerminalNode STATIC() { return getToken(CsharpParser.STATIC, 0); }
		public TerminalNode VOID() { return getToken(CsharpParser.VOID, 0); }
		public TestNameContext testName() {
			return getRuleContext(TestNameContext.class,0);
		}
		public TerminalNode CLOSE_BRACE() { return getToken(CsharpParser.CLOSE_BRACE, 0); }
		public TerminalNode COMMENT() { return getToken(CsharpParser.COMMENT, 0); }
		public List<AssertContext> assert_() {
			return getRuleContexts(AssertContext.class);
		}
		public AssertContext assert_(int i) {
			return getRuleContext(AssertContext.class,i);
		}
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<CommentLineContext> commentLine() {
			return getRuleContexts(CommentLineContext.class);
		}
		public CommentLineContext commentLine(int i) {
			return getRuleContext(CommentLineContext.class,i);
		}
		public TestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test; }
	}

	public final TestContext test() throws RecognitionException {
		TestContext _localctx = new TestContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_test);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			match(TEST_CLASS_ANNOT);
			setState(212);
			match(CLASS);
			setState(213);
			typeName();
			setState(214);
			match(NL);
			setState(215);
			match(TEST_METHOD_ANNOT);
			setState(216);
			match(STATIC);
			setState(217);
			match(VOID);
			setState(218);
			testName();
			setState(224);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 72057595648540672L) != 0)) {
				{
				setState(222);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ASSERT:
					{
					setState(219);
					assert_();
					}
					break;
				case VAR:
					{
					setState(220);
					variableDefinition();
					}
					break;
				case COMMENT:
					{
					setState(221);
					commentLine();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(226);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(227);
			match(CLOSE_BRACE);
			setState(228);
			match(COMMENT);
			setState(229);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
